<resources>
    <string name="app_name">DesafioAndroid</string>
    <string name="splash_de_comida">splash de comida</string>
    <string name="login">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="campo_vazio">Campo vazio</string>
    <string name="senha_diferente">A senha não confere</string>
    <string name="imagem_do_resturante">Imagem do Resturante</string>
    <string name="nome_restaurante">Nome Restaurante</string>
    <string name="pratos_principais">Pratos Principais</string>
</resources>